# frequenz-api-dispatch

./: .cookiecutter-replay.json  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  build-py-proto  ci.yaml  minimum-requirements-ci.txt  mkdocs.yml  noxfile.py  pyproject.toml  setup.py  tox.ini  v0-dev  versions.json
.github/: dependabot.yml  keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/containers/test-installation/: Dockerfile
.github/workflows/: ci.yaml  release-notes-check.yml
latest/: 404.html  index.html
latest-dev/: 404.html  index.html
latest-dev/CONTRIBUTING/: index.html
latest-dev/SUMMARY/: index.html
latest-dev/_overrides/: main.html
latest-dev/protobuf-reference/SUMMARY/: index.html
latest-dev/protobuf-reference/frequenz/api/dispatch/v1/dispatch/: index.html
latest-dev/python-reference/SUMMARY/: index.html
latest-dev/python-reference/frequenz/api/dispatch/: index.html
latest-dev/python-reference/frequenz/api/dispatch/v1/: index.html
latest-dev/python-reference/frequenz/api/dispatch/v1/dispatch_pb2/: index.html
latest-dev/python-reference/frequenz/api/dispatch/v1/dispatch_pb2_grpc/: index.html
latest/SUMMARY/: index.html
latest/_overrides/: main.html
latest/protobuf-reference/SUMMARY/: index.html
latest/protobuf-reference/frequenz/api/dispatch/v1/dispatch/: index.html
latest/protobuf-reference/frequenz/dispatch/v1/dispatch/: index.html
latest/python-reference/SUMMARY/: index.html
latest/python-reference/frequenz/api/dispatch/: index.html
latest/python-reference/frequenz/api/dispatch/v1/: index.html
latest/python-reference/frequenz/api/dispatch/v1/dispatch_pb2/: index.html
latest/python-reference/frequenz/api/dispatch/v1/dispatch_pb2_grpc/: index.html
latest/python-reference/frequenz/dispatch/v1/: index.html
latest/python-reference/frequenz/dispatch/v1/dispatch_pb2/: index.html
latest/python-reference/frequenz/dispatch/v1/dispatch_pb2_grpc/: index.html
next/: 404.html  index.html  objects.inv
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/protobuf-reference/SUMMARY/: index.html
next/protobuf-reference/frequenz/api/dispatch/v1/dispatch/: index.html
next/protobuf-reference/frequenz/dispatch/v1/dispatch/: index.html
next/python-reference/SUMMARY/: index.html
next/python-reference/frequenz/api/dispatch/: index.html
next/python-reference/frequenz/api/dispatch/v1/: index.html
next/python-reference/frequenz/api/dispatch/v1/dispatch_pb2/: index.html
next/python-reference/frequenz/dispatch/v1/: index.html
next/python-reference/frequenz/dispatch/v1/dispatch_pb2/: index.html
next/python-reference/frequenz/dispatch/v1/dispatch_pb2_grpc/: index.html
next/search/: search_index.json
proto/: dispatch.proto
proto/frequenz/api/dispatch/: dispatch.proto
proto/frequenz/api/dispatch/fcr/: prequalification.proto
proto/frequenz/api/dispatch/v1/: dispatch.proto
proto/frequenz/dispatch/v1/: dispatch.proto
proto/fz_api/dispatch/: dispatch.proto
py/frequenz/api/dispatch/: __init__.py
py/frequenz/api/dispatch/fcr/: __init__.py
py/frequenz/dispatch/v1/: __init__.py
pytests/: test_dispatch.py
sql/: create.sql
v0/: 404.html  index.html
v0-dev/: 404.html  index.html
v0-dev/CONTRIBUTING/: index.html
v0-dev/SUMMARY/: index.html
v0-dev/_overrides/: main.html
v0-dev/protobuf-reference/SUMMARY/: index.html
v0-dev/python-reference/SUMMARY/: index.html
v0-dev/python-reference/frequenz/api/dispatch/: index.html
v0-dev/python-reference/frequenz/api/dispatch/v1/: index.html
v0.10/: index.html  objects.inv
v0.10/CONTRIBUTING/: index.html
v0.10/protobuf-reference/frequenz/dispatch/v1/dispatch/: index.html
v0.10/search/: search_index.json
v0.11/: objects.inv
v0.11/python-reference/SUMMARY/: index.html
v0.11/python-reference/frequenz/dispatch/v1/dispatch_pb2_grpc/: index.html
v0.11/search/: search_index.json
v0.12/: 404.html  objects.inv
v0.12/protobuf-reference/SUMMARY/: index.html
v0.12/python-reference/SUMMARY/: index.html
v0.12/python-reference/frequenz/api/dispatch/v1/: index.html
v0.13/: index.html
v0.13/CONTRIBUTING/: index.html
v0.13/SUMMARY/: index.html
v0.13/_scripts/: macros.py
v0.13/protobuf-reference/SUMMARY/: index.html
v0.13/python-reference/SUMMARY/: index.html
v0.13/python-reference/frequenz/api/dispatch/: index.html
v0.14/: 404.html  objects.inv
v0.14-dev/: 404.html  index.html  objects.inv
v0.14-dev/CONTRIBUTING/: index.html
v0.14-dev/SUMMARY/: index.html
v0.14-dev/protobuf-reference/SUMMARY/: index.html
v0.14-dev/python-reference/SUMMARY/: index.html
v0.14-dev/python-reference/frequenz/api/dispatch/: index.html
v0.14-dev/python-reference/frequenz/api/dispatch/v1/: index.html
v0.14-dev/search/: search_index.json
v0.15/: index.html  objects.inv
v0.15-dev/: index.html
v0.15/protobuf-reference/SUMMARY/: index.html
v0.15/python-reference/SUMMARY/: index.html
v0.15/python-reference/frequenz/api/dispatch/: index.html
v0.15/python-reference/frequenz/api/dispatch/v1/: index.html
v0.15/search/: search_index.json
v0.16-dev/: 404.html  index.html  objects.inv
v0.16-dev/CONTRIBUTING/: index.html
v0.16-dev/SUMMARY/: index.html
v0.16-dev/protobuf-reference/SUMMARY/: index.html
v0.16-dev/python-reference/SUMMARY/: index.html
v0.16-dev/python-reference/frequenz/api/dispatch/: index.html
v0.16-dev/python-reference/frequenz/api/dispatch/v1/: index.html
v0.16-dev/search/: search_index.json
v0/CONTRIBUTING/: index.html
v0/SUMMARY/: index.html
v0/_overrides/: main.html
v0/protobuf-reference/SUMMARY/: index.html
v0/protobuf-reference/frequenz/dispatch/v1/dispatch/: index.html
v0/python-reference/SUMMARY/: index.html
v0/python-reference/frequenz/api/dispatch/v1/: index.html
v0/python-reference/frequenz/dispatch/v1/: index.html
v0/python-reference/frequenz/dispatch/v1/dispatch_pb2/: index.html
v0/python-reference/frequenz/dispatch/v1/dispatch_pb2_grpc/: index.html
(+21 files in other folders)
